--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -171,8 +171,8 @@ Ein Teil der Information wird dir dabei zurückerstattet."
     <string name="instr_endless">Du hast alle Level geschafft und das Spiel gewonnen!\n\nWenn du willst, kannst du nun im \"Endlos\"-Modus weitermachen, mit zufällig generierten Leveln, die immer schwieriger werden.\n\nWie weit kommst du?\n</string>
     <string name="message_endless_unavailable">Verfügbar nach Abschluss aller vorherigen Level.</string>
     <string-array name="fun_fact">
-        <item>Bis 1999 war ein <i>Kilobyte</i> noch 1024 Bytes. Aus Gründen der Konsistenz mit anderen SI-Einheiten wurde die Bedeutung zu \"1000 Bytes\" geändert.\n\nGleichzeitig wurde das <i>Kibibyte</i> erfunden. Es gilt: 1 KiB = 1024 B.</item>
-        <item>An actual computer bug was found in a Mark II computer in 1947. A small insect had gotten into a relay, making programs fail.\nThe term "bug" for programming errors, however, had been coined long time ago.</item>
+        <item>Bis 1999 war ein <i>Kilobyte</i> (kB) noch 1024 Bytes "wert". Aus Gründen der Konsistenz mit anderen SI-Einheiten wurde die Bedeutung zu \"1000 Bytes\" geändert.\n\nGleichzeitig wurde das <i>Kibibyte</i> (kiB) erfunden. Es gilt: 1 KiB = 1024 B.</item>
+        <item>Ein echter "Bug" wurde 1947 in einem Harvard Mark II Computer gefunden. Ein kleines Insekt - englisch <i>bug</i> - war in ein Relais geraten, was zu Programmfehlern führte.\n\nDer Begriff "Bug" für Computerfehler wurde jedoch schon vorher verwendet. Bereits im 19. Jahrhundert wurden kleine Störungen in mechanischen Geräten im Englischen als "Bugs" bezeichnet.</item>
         <item>"Breadbin" (or "breadbox") was a nickname for the Commodore C64, due to its characteristic form.</item>
         <item>Die Frage, welches der erste moderne Computer war, lässt sich salomonisch so beantworten:\nDie Z3 von Konrad Zuse war 1941 fertig gestellt und damit vier Jahre vor dem ENIAC. Sie arbeitete mit Relais und war damit der erste <i>elektromechanische</i> Computer, während ENIAC Vakuumröhren verwendete und daher als der erste <i>elektronische</i> Computer gilt.</item>
         <item></item>
