--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -124,4 +124,6 @@
         <item>Dans une nouvelle de Stanisław Lem, le vaisseau spatial "Ariel" s\'écrase sur Mars lors de l\'atterrissage. Il s\'avère que l\'ordinateur de bord souffrait d\'une sorte de névrose obsessionnelle. Plus la situation devenait critique, plus il demandait d\'informations dans sa folie de contrôle, jusqu\'à ce qu\'il ne puisse plus traiter la quantité de données.\n\nUne situation similaire s\'est produite en réalité lors du premier alunissage. Heureusement pour les astronautes, l\'ordinateur de bord avait toutefois été programmé par Margaret Hamilton et son équipe de manière à ce que, dans des situation de stress, il n\'exécute tout simplement plus les tâches moins importantes et restait ainsi opérationnel.</item>
     </string-array>
     <string name="settings_keep_levels">Conserver les niveaux en mode infini</string>
+    <string name="game_paused">PAUSE</string>
+    <string name="settings_fast_fast_forward">\"Fast forward\" rapide</string>
 </resources>
