--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -75,7 +75,7 @@ MEM-Chips sind mächtig, weil sie jeden Angreifer neutralisieren können, aber s
 In Hex gibt es die Ziffern von 0 bis 9 und dann von A bis F. Die Hex-Zahl 0x0F entspricht 15 dezimal bzw. 1111 im Binärsystem."
     </string>
     <string name="instr_14">Ein weiterer Chip ist verfügbar! \n\nDer CLK-Chip (\'clock\', hier: Taktgeber) hat selber keinen Einfluss auf die Angreifer. Stattdessen beschleunigt er die anderen Chips auf dem Board. Jedes Mal, wenn CLK tickt, wird der Cooldown-Timer aller anderen Chips zurückgesetzt, und sie sind wieder betriebsbereit.\n\nEine Aufrüstung erhöht die CLK-Frequenz.</string>
-    <string name="instr_15">Das Übertakten der CPU kann gefährlich sein. Je schneller die Chips arbeiten, desto heißer werden sie.\n\nJedes Mal, wenn der Taktgeber CLK einen Chip zurücksetzt, wird ein bisschen Wärme erzeugt. Temperaturen über %d Grad können die CPU beschädigen - das heißt, du riskierst ein Leben.\n</string>
+    <string name="instr_15">Das Übertakten der CPU kann gefährlich sein. Je schneller die Chips arbeiten, desto heißer werden sie.\n\nJedes Mal, wenn der Taktgeber CLK einen Chip zurücksetzt, wird ein bisschen Wärme erzeugt. Temperaturen über %d Grad können die CPU beschädigen - das heißt, du riskierst eins deiner Leben.\n</string>
     <string name="turing">
 "Alan Turing war eine der wichtigsten Persönlichkeiten in der Computerwissenschaft. Er legte viele der Grundlagen der theoretischen Informatik, unter anderem durch die Turing-Maschine und den Turing-Test. Außerdem entschlüsselte er den Enigma-Code im zweiten Weltkrieg. Sein Einfluss auf den Verlauf des Krieges kann kaum überschätzt werden.
 
@@ -194,4 +194,7 @@ Ein Teil der Information wird dir dabei zurückerstattet."
     <string name="settings_keep_levels">Level im Endlos-Modus beibehalten</string>
     <string name="game_paused">PAUSE</string>
     <string name="settings_fast_fast_forward">Schnelles \"Fast Forward\"</string>
+    <string name="kilby">Jack St. Clair Kilby hatte die Idee, Halbleiterelemente - also etwa Transistoren oder Dioden - in einer integrierten Schaltung (IC) zusammenzufassen, statt die Bauteile einzeln auf einer Leiterplatine zu verdrahten. Dies war die Grundlage für Mikrochips und Prozessoren und machte die gesamte moderne Elektronik mit ihrer Miniaturisierung erst möglich.\n\nJack Kilby gilt auch als Mit-Erfinder von Taschenrechner und Thermodrucker.\n</string>
+    <string name="shortdesc_limit_unwanted">Anzahl unerwünschter Chips\n</string>
+    <string name="HERO_EFFECT_LIMITUNWANTED">Reduziert die Anzahl unerwünschter Chips</string>
 </resources>
