--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,8 +113,8 @@ In hex, you have digits from 0 to 9 and then from A to F. The hex number 0x0F eq
 "Note that cryptocoins are unaffected by ACC and also by MEM chips."
     </string>
     <string name="instr_14">Another chip becomes available! \n\nThe CLK (clock) chip does not affect the attackers itself. Instead, it speeds up the other chips on the board. Each time the CLK ticks, the cooldown timer of all other chips is reset, and they become ready to operate anew.\n\nUpgrading increases the CLK frequency.</string>
-    <string name="instr_15">Overclocking the CPU can be dangerous: The faster your chips work, the hotter they will get.\n\nEach time your clock resets a chip, a small amount of heat is produced. Temperatures of more than %d degrees can damage the CPU, that means, that they can cost you a life.</string>
-    <string name="instr_16">The NOP chip ("No operation") does nothing. But it takes up one slot, so you might want to remove it.\n\nA NOP 2 chip also does nothing, but twice.</string>
+    <string name="instr_15">Overclocking the CPU can be dangerous: The faster your chips work, the hotter they will get.\n\nEach time your clock resets a chip, a small amount of heat is produced. Temperatures of more than %d degrees can damage the CPU, that means, that they can cost you one life.</string>
+    <string name="instr_16">The NOP chip (No operation) does nothing. But since it occupies a slot, you might want to remove it.\n\nA NOP 2 chip also does nothing, but twice.</string>
     <string name="instr_endless">You have successfully cleared all stages and won the game!\n\nIf you want, you can continue in <i>endless</i> mode, with randomly generated circuits that get more and more difficult.\n\nHow far will you get?</string>
 
 
@@ -177,6 +177,7 @@ The programming language Pascal is named after him."</string>
     <string name="mandelbrot">Benoît Mandelbrot was the most important founder of fractal geometry, which can not only be used to describe many structures in nature very well, but also to create fantastic graphics on the computer. \n\nThe graphical representation of the Mandelbrot set went viral and founded a new age of computer art.</string>
     <string name="schneier">"Bruce Schneier is an expert on cryptography and information security. He has written important books on the subject, most notably 'Applied Cryptography', and has designed several cryptographic algorithms.\n        \nHe is not afraid of criticizing governments or global companies if he deems their actions counterproductive to security or violating the right of privacy.\n "</string>
     <string name="meier">Sidney K. Meier has created some of the most influential strategy games and revolutionised the genre. With comparatively simple rules, his games simulate the complexities of reality amazingly well. And they always tell a story: of the age of the railways, of the American Revolution, or - as in his most famous work \'Civilization\' - of 6000 years of human history.</string>
+    <string name="kilby">Jack St. Clair Kilby had the idea of combining semiconductor elements - such as transistors or diodes - in an integrated circuit (IC) instead of wiring the components individually on a board. This was the basis for microchips and processors and made modern electronics with its miniaturisation possible in the first place.\n\n\nJack Kilby is also regarded as co-inventor of the pocket calculator and thermal printer.</string>
     <string name="settings_title">Settings</string>
     <string name="settings_about">About</string>
     <string name="license">\n        \nThis game is open source. Visit https://github.com/ochadenas/cpudefense for more information.\n\nThe portraits of the Information Age Heroes are mostly derived from works of the public domain.\n\nOriginal photos:\n  Alex Handy (CC BY-SA 2.0)\n  Jacob Appelbaum (CC BY-SA 2.5)\n  Konrad Jacobs (CC BY-SA 2.0 de)\n  Rama (CC BY-SA 2.0 fr)\n  Shervinafshar (CC BY-SA 3.0)\n  Tony Bove (CC BY 3.0)\n  Wolfgang Hunscher (CC BY-SA 3.0)\n  Silvano de Gennaro (courtesy of the author)\n  Clermont Auvergne Métropole (CC BY-SA 4.0)\n  Jean-Frédéric (CC BY 2.0)\n\nComputer boards:\n  Autopilot (CC BY-SA 4.0)\n  Bill Bertram (CC-BY 2.0)\n  Oliver Chadenas (CC BY-SA 3.0)\n  Smial (FAL)\n\nAll other artwork:\n  Oliver Chadenas (CC BY-SA 3.0)</string>
@@ -198,6 +199,7 @@ The programming language Pascal is named after him."</string>
     <string name="shortdesc_range">Chip range</string>
     <string name="shortdesc_refund">Refund when selling chips</string>
     <string name="shortdesc_max_hero_upgrade">max hero level</string>
+    <string name="shortdesc_limit_unwanted">unwanted chip count</string>
     <string name="upgrade_format">%s  [cost: %d]</string>
     <string name="toast_next_stage">Stage %d</string>
     <string name="toast_stage_cleared">Stage cleared</string>
@@ -213,6 +215,7 @@ The programming language Pascal is named after him."</string>
     <string name="HERO_EFFECT_REFUNDPRICE">Increases refund when selling chips</string>
     <string name="HERO_EFFECT_GAININFO">Increases information gain through destroying attackers</string>
     <string name="HERO_EFFECT_RANGE">Increases %s chip range</string>
+    <string name="HERO_EFFECT_LIMITUNWANTED">Reduces the number of unwanted chips</string>
     <string name="toast_loading">Loading …</string>
     <string name="name_series_1">Normal</string>
     <string name="name_series_2">Turbo</string>
