--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -86,11 +86,7 @@ Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er starb 1954
     <string name="query_restart_game">Wirklich ein neues Spiel beginnen?  Dadurch wird der gesamte Fortschritt zurück auf Null gesetzt.</string>
     <string name="no">Nein</string>
     <string name="instr_7a">Einige Tipps:\n\nDenke daran, dass SHR-Chips zwar stark sind, aber Angreifer nicht ausschalten können. Sie schwächen Angreifer mit hohen Werten, aber gegen Horden schwacher Angreifer können mehrere SUB-Chips eine effektivere Verteidigung darstellen.\n\nDie Chips müssen zwischen zwei Operationen abkühlen. Stelle Helden ein, um die Wahrscheinlichkeit zu verringern, dass Chips von einem massiven Ansturm überwältigt werden.\n\nWenn du nicht weiter kommst, kannst du einen der niedrigeren Level erneut spielen, um dort einen Cryptocoin einzufangen.\n</string>
-    <string name="instr_8">
-"Du kannst Chips wieder verkaufen und so ihren Steckplatz neu verwenden.
-
-Ein Teil der Information wird dir dabei zurückerstattet."
-    </string>
+    <string name="instr_8">"\nDu kannst Chips wieder verkaufen und so ihren Steckplatz neu verwenden. Ein Teil der Information wird dir dabei zurückerstattet.\n\nFalls der Chip gerade aktiv ist, beendet er noch seinen laufenden Abkühlungszyklus, bevor er verschwindet.\n    "</string>
     <string name="lovelace">
 "Ada Gräfin Lovelace gilt als die Erfinderin der Programmierung. Zusammen mit Charles Babbage arbeitete sie mit seiner Rechenmaschine. Sie stellte ein Instruktionsset für die Berechnung der Bernoullizahlen auf, das vermutlich das erste formale Programm überhaupt war.\n\nLovelace erkannte, dass die Möglichkeiten einer programmierbaren Maschine weit über arithmetische Berechnungen hinaus gingen. Sie war zudem die erste, die zwischen symbolischen Konzepten (Software) und physischen Teilen (Hardware) unterschied."
     </string>
