--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,9 +81,7 @@ If you do not get all the coins, you can always replay the level. However, once 
 But be careful. The moving cryptocoin is stronger than ordinary attackers, and if it reaches the CPU, it will take one of your lives."
     </string>
     <string name="instr_7a">Some hints:\n\nRemember that SHR chips are powerful but cannot eliminate attackers. They quickly reduce large values, but against hordes of weak attackers, multiple SUB chips may be a more cost-effective defence.\n\nChips need to cool down between operations. Hire heroes to reduce the chance of grouped attackers overwhelming a chip.\n\nIf you are stuck, you can replay a lower level trying to catch a running cryptocoin.\n</string>
-    <string name="instr_8">
-"You can sell existing chips and re-use their slot. Most, but not all of the information will be refunded."
-    </string>
+    <string name="instr_8">"\nYou can sell existing chips and re-use their slot. Most, but not all of the information will be refunded.\n\nNote that an activated chip will complete its current cooldown cycle before disappearing. "</string>
     <string name="instr_9">
 "Let's introduce another chip. The MEM (for memory) chip takes a number and stores it safely away in memory.
 
