--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="button_startGame">Start new game</string>
     <string name="pref_filename" translatable="false">prefs.xml</string>
     <string name="pref_filename_level_structure" translatable="false">structure</string>
-    <string name="button_resume">Play next level</string>
+    <string name="button_resume">Resume game</string>
+    <string name="button_playlevel">Play level</string>
+    <string name="button_nextlevel">Play next level</string>
     <string name="failed">Failed to clear stage.</string>
     <string name="success">All stages cleared!</string>
     <string name="cleared">Stage cleared.</string>
