--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -3,6 +3,8 @@
     <string name="app_name">ChipDefense</string>
     <string name="button_startGame">Neues Spiel</string>
     <string name="button_resume">Spiel fortsetzen</string>
+    <string name="button_playlevel">Level spielen</string>
+    <string name="button_nextlevel">Nächsten Level spielen</string>
     <string name="failed">Level nicht geschafft.</string>
     <string name="success">Alle Level geschafft!</string>
     <string name="cleared">Level geschafft.</string>
@@ -63,11 +65,7 @@ Das Verschieben ist gleichbedeutend mit einer Division durch 2."
 
 Vorsicht: Der laufende Cryptocoin ist stärker als die gewöhnlichen Angreifer. Wenn er die CPU erreicht, kostet dies ebenfalls ein Leben."
     </string>
-    <string name="instr_9">
-"Wir führen einen neuen Chip ein, nämlich MEM (für memory). Dieser nimmt eine Zahl und speichert sie weg.
-
-MEM-Chips sind mächtig, weil sie jeden Angreifer neutralisieren können, aber sie sind sehr langsam."
-    </string>
+    <string name="instr_9">"Wir führen einen neuen Chip ein, nämlich MEM (für memory). Dieser nimmt eine Zahl und speichert sie weg.\n\nAn dem breiteren Rahmen lässt sich erkennen, dass sich eine Zahl im Inneren befindet. In diesem Zustand kann der MEM-Chip keine weitere Zahl speichern. Er muss zuvor \'ausgelesen\' werden (durch Antippen). Erst damit beginnt sein Abkühlungszyklus, und anschließend kann er den nächsten Angreifer aufnehmen.\n\nMEM-Chips sind mächtig, weil sie jeden Angreifer ausschalten können, aber sie erfordern Aufmerksamkeit und sind ziemlich langsam.\n"</string>
     <string name="instr_10">"Der Akkumulator-Chip (ACC) ist etwas komplexer als die anderen, aber er kann gegen eine große Zahl von Angreifern sehr wirkungsvoll sein. Er kombiniert zwei Zahlen zu einem Ergebnis. \n\nIn der Basisvariante addiert er die beiden Zahlen. In der ersten Ausbaustufe führt er ein logisches ODER durch, in der zweiten Stufe ein logisches UND.\n \n Beispiel: Wenn die Zahlen 0110 (also 6) und 0011 (also 3) im ACC verarbeitet werden, ist das Ergebnis \n1001 (also 9) bei Addition [ACC +]\n0111 (also 7) bei ODER [ACC v]\n0010 (also 2) bei UND [ACC &amp;].\n\nDer Vorteil des ACC ist, dass er richtig schnell ist.\n\n    "</string>
     <string name="instr_11">
 "Größere Zahlen werden hexadezimal dargestellt. Sie haben ein vorangestelltes 'x'.
